# ORG_Core

./: .coveragerc  .env.production.template  .gitignore  0001-fix-Add-owner-dashboard-RARA-status-endpoint-and-ngi.patch  COMMIT_MESSAGE.txt  COMPLETE_DROPLET_CLEANUP_AND_REDEPLOY.sh  HARDCODED_URLS_REPORT.txt  LLM_INFRASTRUCTURE_ANALYSIS.md  PLAN_neural_tools_unification.sh  QUICK_CLEANUP.sh  README.txt  TOOL_SYSTEMS_ANALYSIS.sh  UNIFIED_LLM_INTEGRATION_REPORT.md  VERSION  commit_analytics_fix.sh  commit_gateway_fix.sh  deploy-unified.sh  docker-compose.unified.yml  manual-deploy.sh  pytest.ini  run_all_tests.sh  test-all-triggers.txt  test-backend-cicd-fix.txt  test-blue-green.txt  test-deployment-fix.txt  test-deployment.txt  test-gateway-fix.txt  test-gateway-update.txt  test-monitoring-cicd.txt  test-triggers-fixed.txt  test-workflow-rerun.txt  test-workflow-validation.txt  test_analytics_endpoints.sh  test_db_connection.py  test_sandbox_security.py
node/: Dockerfile  pyproject.toml
node/agents/code-analyzer/: main.py  manifest.json
node/agents/data-summarizer/: main.py  manifest.json
node/agents/hello-world/: main.py  manifest.json
node/agents/json-validator/: main.py  manifest.json
node/agents/research-assistant/: main.py  manifest.json
node/agents/task-planner/: main.py  manifest.json
node/config/: default.yaml
node/data/: node-identity.json
node/data/agents/sandboxes/0x6bf8e4988147478a64f0a72eb2b411df6b3256167c2347c72cefcd4d444ea7f1:api-session/code/: _exec.py  main.py
node/data/identity/: identity.json  private.key
node/tests/: test_blockchain_base_testnet.py
shared/: utils.py  (+12 more)
(+709 files in other folders)
